--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,21 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    
+      <script src="https://cdn.tailwindcss.com"></script>
+
+    <!-- Optionnel : configuration personnalisée -->
+    <script>
+      tailwind.config = {
+        theme: {
+          extend: {
+            colors: {
+              primary: "#2563eb", // Bleu principal
+              secondary: "#f5cb5c", // Jaune personnalisé
+            },
+          },
+        },
+      };
+    </script>
     <title>Portfolio - Fachinformatiker</title>
   </head>
   <body>
