--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,16 @@
       name="description"
       content="Portfolio d'un Fachinformatiker spécialisé en développement web et mobile"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+   <!-- Favicon pour les navigateurs -->
+<link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png" />
+<link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png" />
+
+<!-- Apple Touch Icon pour iOS -->
+<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+
+<!-- Manifest pour PWA (optionnel) -->
+<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
     
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
